{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 92,
  "lineage": "9030a295-fd29-c08c-f28f-1dd55cb7c2da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c863d2b85092491e",
            "arn": "arn:aws:ec2:us-west-1:294825482201:elastic-ip/eipalloc-0c863d2b85092491e",
            "domain": "vpc",
            "id": "eipalloc-0c863d2b85092491e",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-68-198.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.68.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "n8n-app-nat-us-west-1a",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-nat-us-west-1a",
              "Project": "n8n-app"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0441007d44ec239a1",
            "arn": "arn:aws:ec2:us-west-1:294825482201:elastic-ip/eipalloc-0441007d44ec239a1",
            "domain": "vpc",
            "id": "eipalloc-0441007d44ec239a1",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-215-103.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.215.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "n8n-app-nlb-eip-us-west-1a",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-nlb-eip-us-west-1a",
              "Project": "n8n-app"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb65fc9d33c79e3a",
            "arn": "arn:aws:ec2:us-west-1:294825482201:elastic-ip/eipalloc-0fb65fc9d33c79e3a",
            "domain": "vpc",
            "id": "eipalloc-0fb65fc9d33c79e3a",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-57-108-151.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.108.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "n8n-app-nlb-eip-us-west-1c",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-nlb-eip-us-west-1c",
              "Project": "n8n-app"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:internet-gateway/igw-060e0ee77d3211c00",
            "id": "igw-060e0ee77d3211c00",
            "owner_id": "294825482201",
            "tags": {
              "Name": "n8n-app-igw",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-igw",
              "Project": "n8n-app"
            },
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c863d2b85092491e",
            "association_id": "eipassoc-096c6e0dc6939b13c",
            "connectivity_type": "public",
            "id": "nat-084a4cec9ad98f18a",
            "network_interface_id": "eni-0127203ff30b6c476",
            "private_ip": "10.0.0.80",
            "public_ip": "54.241.68.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a50d244e56c64c8f",
            "tags": {
              "Name": "n8n-app-nat-us-west-1a",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-nat-us-west-1a",
              "Project": "n8n-app"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:route-table/rtb-00d7d3d8b522a2390",
            "id": "rtb-00d7d3d8b522a2390",
            "owner_id": "294825482201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084a4cec9ad98f18a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n8n-app-private-rt-us-west-1a",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-private-rt-us-west-1a",
              "Project": "n8n-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:route-table/rtb-02cb230bb6c29bd3b",
            "id": "rtb-02cb230bb6c29bd3b",
            "owner_id": "294825482201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084a4cec9ad98f18a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n8n-app-private-rt-us-west-1c",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-private-rt-us-west-1c",
              "Project": "n8n-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:route-table/rtb-0a7863fc412ae277d",
            "id": "rtb-0a7863fc412ae277d",
            "owner_id": "294825482201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060e0ee77d3211c00",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n8n-app-public-rt",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-public-rt",
              "Project": "n8n-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ceb35ee432f29e1",
            "route_table_id": "rtb-00d7d3d8b522a2390",
            "subnet_id": "subnet-01311710f484bafce"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0537670a487bd78",
            "route_table_id": "rtb-02cb230bb6c29bd3b",
            "subnet_id": "subnet-0a18291b258a21045"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca352a3353b2c3f6",
            "route_table_id": "rtb-0a7863fc412ae277d",
            "subnet_id": "subnet-0a50d244e56c64c8f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f593ff324257a4f0",
            "route_table_id": "rtb-0a7863fc412ae277d",
            "subnet_id": "subnet-097bf53157bf5604f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:security-group/sg-0b397543bdb332b49",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b397543bdb332b49",
            "ingress": [],
            "name": "n8n-app-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "294825482201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "n8n-app-eks-nodes-sg",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "n8n-app-eks-nodes-sg",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:security-group/sg-0e26680591c2a3069",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e26680591c2a3069",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS cluster security group",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0948d6a52713cb1b7"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS worker nodes (custom SG)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b397543bdb332b49"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "n8n-app-rds-sg",
            "name_prefix": "",
            "owner_id": "294825482201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "n8n-app-rds-sg",
              "Project": "n8n-app"
            },
            "tags_all": {
              "Name": "n8n-app-rds-sg",
              "Project": "n8n-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.eks_nodes",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.eks_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster control plane to communicate with nodes",
            "from_port": 1025,
            "id": "sgrule-2454280221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b397543bdb332b49",
            "security_group_rule_id": "sgr-0be758a2bc52d2e0c",
            "self": false,
            "source_security_group_id": "sg-0948d6a52713cb1b7",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.eks_nodes",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.eks_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with cluster API",
            "from_port": 443,
            "id": "sgrule-779204223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0948d6a52713cb1b7",
            "security_group_rule_id": "sgr-059a0fe604ed8cd2c",
            "self": false,
            "source_security_group_id": "sg-0b397543bdb332b49",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.eks_nodes",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.eks_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3941341440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b397543bdb332b49",
            "security_group_rule_id": "sgr-09df69e322a127bc5",
            "self": false,
            "source_security_group_id": "sg-0b397543bdb332b49",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:subnet/subnet-01311710f484bafce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01311710f484bafce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294825482201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n8n-app-private-us-west-1a",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "n8n-app-private-us-west-1a",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:subnet/subnet-0a18291b258a21045",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a18291b258a21045",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294825482201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n8n-app-private-us-west-1c",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "n8n-app-private-us-west-1c",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:subnet/subnet-0a50d244e56c64c8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a50d244e56c64c8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294825482201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n8n-app-public-us-west-1a",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "n8n-app-public-us-west-1a",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:subnet/subnet-097bf53157bf5604f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097bf53157bf5604f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294825482201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n8n-app-public-us-west-1c",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "n8n-app-public-us-west-1c",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0abc94cc54bf32b2d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294825482201:vpc/vpc-0abc94cc54bf32b2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02612d7a65f8a23c5",
            "default_route_table_id": "rtb-09268c53f7f45039f",
            "default_security_group_id": "sg-043c821390ca39d5a",
            "dhcp_options_id": "dopt-019569d9fc18d0560",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abc94cc54bf32b2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09268c53f7f45039f",
            "owner_id": "294825482201",
            "tags": {
              "Name": "n8n-app-vpc",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "n8n-app-vpc",
              "Project": "n8n-app",
              "kubernetes.io/cluster/n8n-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}